...
                    android:layout_marginTop="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/trash_icon"
                        android:contentDescription="@string/delete"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
...
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="2" />

                    <ImageView
                        android:id="@+id/share_icon"
                        android:layout_width="0dp"
                        android:contentDescription="@string/share_description"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
...
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/playlist_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:ellipsize="end"
                        android:imeOptions="actionDone"
                        android:inputType="text"
...
                        android:visibility="gone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/brush_icon_playlist"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@android:color/transparent"
                        android:backgroundTintMode="src_over"
                        android:contentDescription="@string/image_description"
                        android:src="@drawable/ic_brush"
...
                        android:textSize="16sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/playlist_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="4"
...
                        android:visibility="gone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/brush_icon_description"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@android:color/transparent"
                        android:backgroundTintMode="src_over"
                        android:contentDescription="@string/description_playlist"
                        android:src="@drawable/ic_brush"
...
