...
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="" />

    <item
        android:id="@+id/top_list"
        android:icon="@drawable/ic_list"
        android:title="" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_star"
...
