...
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/song_image"
        app:layout_constraintRight_toLeftOf="@+id/song_options"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:maxLines="1"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/song_trash"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:scaleType="fitCenter"
...
