...
            android:layout_height="wrap_content"
            android:labelFor="@+id/username_tv"
            android:text="@string/login_username_title" />

        <!-- Username input -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/rounded_border"
            android:inputType="textAutoComplete"
...
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/password_tv"
            android:text="@string/login_password_title" />

        <!-- Password input -->
        <EditText
            android:id="@+id/password_tv"
            android:layout_width="match_parent"
...
            android:inputType="textPassword"
            android:paddingHorizontal="12dp" />
    </LinearLayout>

    <!-- Login button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/blue"
        android:text="@string/login_btn"
...
