<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
    app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">

    <androidx.constraintlayout.widget.ConstraintLayout
...
                        android:maxLines="2"
                        android:text="@string/new_comment_title"
                        android:textColor="@color/blue"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/new_comment_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_comment_hint"
                        android:textAllCaps="false"
                        android:textColor="@color/gray"
                        android:textSize="18sp" />
...
