<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarStyle"
    app:layout_scrollFlags="scroll|enterAlways">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="homeIcon"
            app:srcCompat="@drawable/ic_musicgo" />

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="Settings"
            app:srcCompat="@drawable/ic_settings" />

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>